@@ -3,3 +3,5 @@ mysql gasashvebad dagchirdeba xampp.
 
 es mysqlconnector link https://dev.mysql.com/downloads/file/?id=538917
 es javafx-sdk link https://gluonhq.com/products/javafx/
+
+es vm option command aris --module-path "C:\Users\gogis\OneDrive\Desktop\Java\javafx-sdk-24.0.1\lib" --add-modules javafx.controls,javafx.fxml
